--- a/about.html
+++ b/about.html
@@ -61,7 +61,12 @@
             <div class="card_content">
               <h2 class="card_title">Nicolás C.</h2>
               <p class="card_text">Full Stack</p>
-              <button class="btn card_btn">Read More</button>
+              <button class="btn card_btn" id="p1">Read More</button>
+              <script type="text/javascript">
+                document.getElementById("p1").onclick = function () {
+                    location.href = "https://www.youtube.com/watch?v=dQw4w9WgXcQ";
+                };
+            </script>
             </div>
           </div>
         </li>
@@ -71,7 +76,12 @@
             <div class="card_content">
               <h2 class="card_title">Juan Ignacio F. L.</h2>
               <p class="card_text">Artificial Intelligence</p>
-              <button class="btn card_btn">Read More</button>
+              <button class="btn card_btn" id="p2">Read More</button>
+              <script type="text/javascript">
+                document.getElementById("p2").onclick = function () {
+                    location.href = "https://www.youtube.com/watch?v=KCsciorg72w";
+                };
+            </script>
             </div>
           </div>
         </li>
@@ -82,7 +92,12 @@
             <div class="card_content">
               <h2 class="card_title">Gabriel O.</h2>
               <p class="card_text">Hardware</p>
-              <button class="btn card_btn">Read More</button>
+              <button class="btn card_btn" id="p3">Read More</button>
+              <script type="text/javascript">
+                document.getElementById("p3").onclick = function () {
+                    location.href = "https://www.youtube.com/watch?v=zAcc07KFCqI";
+                };
+            </script>
             </div>
           </div>
         </li>
@@ -93,7 +108,12 @@
             <div class="card_content">
               <h2 class="card_title">Sofía Elisa T. V.</h2>
               <p class="card_text">Design</p>
-              <button class="btn card_btn">Read More</button>
+              <button class="btn card_btn" id="p4">Read More</button>
+              <script type="text/javascript">
+                document.getElementById("p4").onclick = function () {
+                    location.href = "https://www.youtube.com/shorts/AROmn3626vc";
+                };
+            </script>
             </div>
           </div>
         </li>
