--- a/car.html
+++ b/car.html
@@ -6,7 +6,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     
-    <title>About</title>
+    <title>Car</title>
     <link rel="icon shortcut" href="https://static.vecteezy.com/system/resources/previews/001/193/949/non_2x/race-car-wheel-png.png ">
 
     <!-- Metadata-->
