--- a/404.html
+++ b/404.html
@@ -1,1 +1,42 @@
-<h1> Wheel-404 </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <!-- Setup -->
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    
+    <title>404</title>
+    <link rel="icon shortcut" href="https://static.vecteezy.com/system/resources/previews/001/193/949/non_2x/race-car-wheel-png.png ">
+
+    <!-- Metadata-->
+    <meta name="keywords" content="Wheel-IA, Wheel, AI">
+    <meta name="description" content="Wheel-IA is a Wheel with an AI">
+    <meta name="author" content="annon">
+    <meta name="copyright" content="none">
+    
+    <!-- Linking-->
+    <link rel="stylesheet" href="css/404.css">
+
+    <script type="text/javascript" src="js/404.js"></script>
+</head>
+
+<body>
+  <h1 class="top-text">It seems like <br> not even Wheel-IA <br> can find <br> a way out of here</h1>
+  <button class="btn draw-border" id="back">Drive Back</button>  
+  <script type="text/javascript">
+      document.getElementById("back").onclick = function () {
+          location.href = "/index.html";
+        };
+      </script>
+  
+  <div class="traffic-lights shape">
+    <div class="shadow"></div>
+    <div class="light red"></div>
+    <div class="light amber"></div>
+    <div class="light green"></div>
+  </div>  
+
+</body>
+
+</html>
