--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     </nav>
     <header class="container">
       <div>
-        <h1>Wheel-IA</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum blanditiis sit animi corrupti cupiditate id ducimus fugit consequuntur quis odit!</p>
+        <h1>Wheeliam: El auto inteligente</h1>
+        <p>Wheeliam es un auto controlado por inteligencia artificial diseñado para moverse por la escuela con las indicaciones de un usuario.</p>
       </div>
       <div class="carr">
         <img class="car" src="https://pngimg.com/uploads/bugatti/bugatti_PNG99574.png" loading="lazy">
