generic carparts.png
:S

--- a/car.html
+++ b/car.html
@@ -49,5 +49,6 @@
         </div>
       </ul>
     </nav>
+  <img src="https://media.hinrichfoundation.com/media/x51ag21x/carputer-parts.png" alt="car" class="partes_auto">
   </body>
   <html>
